たぶんできた

--- a/index.html
+++ b/index.html
@@ -30,24 +30,27 @@
                 <p class="cateTitle">パレット</p>
                 <span id="palette"></span>
             </div>
+            <button class="button" onclick="reset_disp(0)">前を初期化</button>
+            <button class="button" onclick="reset_disp(1)">後を初期化</button>
+            <br class="SPnone">
+            <button class="button" onclick="sync_disp()">前を後へコピー</button>
+            <button class="button" onclick="down_disp()">一つ明るく</button>
+            <br class="SPnone">
+            <button class="button" onclick="up_disp()">一つ暗く</button>
         </div>
     </div>
     <div class="clear"></div>
-    <button class="button" onclick="reset_disp(0)">前を初期化</button>
-    <button class="button" onclick="reset_disp(1)">後を初期化</button>
 
-    <button class="button" onclick="sync_disp()">前を後へコピー</button>
-    <button class="button" onclick="up_disp()">一つ明るく</button>
-    <button class="button" onclick="down_disp()">一つ暗く</button>
-
-    <div class="cate">
+</div>
+<footer>
+    <div class="cate" id="content">
         <p class="cateTitle">色見本</p>
         <span id="mihon"></span>
     </div>
-</div>
-<footer>
-    <input type="text" id="pass" maxlength="32" placeholder="パスワード">
-    <button class="button" onclick="save_disp()">パスワードを表示する</button>
-    <button class="button" onclick="load_disp()">パスワードからロードする</button>
+    <div class="footer">
+        <input type="text" id="pass" maxlength="32" placeholder="パスワード">
+        <button class="button" onclick="save_disp()">パスワードを表示する</button>
+        <button class="button" onclick="load_disp()">パスワードからロードする</button>
+    </div>
 </footer>
 </body>
