--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <link rel="icon" href="img/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -43,7 +44,7 @@
 
 </div>
 <footer>
-    <div class="cate" id="content">
+    <div class="cate">
         <p class="cateTitle">色見本</p>
         <span id="mihon"></span>
     </div>
