--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </div>
 <footer>
-    <div class="cate">
+    <div class="cate max1000">
         <p class="cateTitle">色見本</p>
         <span id="mihon"></span>
     </div>
