--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div>
         <div class="FloatL">
             <div class="cate">
-                <p class="cateTitle">before</p>
+                <p class="cateTitle">ホワイトニング前</p>
                 <span id="before_disp"></span>
             </div>
 
             <div class="cate">
-                <p class="cateTitle">after</p>
+                <p class="cateTitle">ホワイトニング後</p>
                 <span id="after_disp"></span>
             </div>
         </div>
